TAG: qcreports_db-6-0-22-74
DATE: 11/30/2023
STAFF: dbm
qcr.shtml: remove link to arrayexpload (retired)

TAG: qcreports_db-6-0-22-73
DATE: 11/28/2023
STAFF: lec
wts2-1343/fl2-653/Custom GXD report for highlight

TAG: qcreports_db-6-0-22-72
DATE: 11/21/2023
STAFF: lec
wts2-1342/fl2-649/one more for the PRB_Reference.sql.rpt/rename it

TAG: qcreports_db-6-0-22-70
DATE: 11/14/2023
STAFF: dbm
qcr.shtml: remove link to genmapload (retired)

TAG: qcreports_db-6-0-22-71
TAG: qcreports_db-6-0-22-69
DATE: 11/13/2023
STAFF: lec
wts2-1331/fl2-637/Update Images QC
#       modified:   mgd/GXD_Images.py

TAG: qcreports_db-6-0-22-68
DATE: 11/13/2023
STAFF: lec
wts2-1330/fl2-636/Duplicate RNAscope Probes (Mm-%)
#       modified:   monthly/PRB_Reference.sql

TAG: qcreports_db-6-0-22-67
TAG: qcreports_db-6-0-22-66
DATE: 11/09/2023
STAFF: lec
wts2-1328/fl2-633/Gene Expr Patterns papers to full code
#       modified:   weekly/GXD_FullCode.py

TAG: qcreports_db-6-0-22-65
DATE: 11/03/2023
STAFF: lec
wts2-1321/fl2-616/add PMID to Invalid Inferred From Values report
#       modified:   mgd/VOC_InvalidInferred.py

TAG: qcreports_db-6-0-22-64
DATE: 11/01/2023
STAFF: lec
wts2-1315/fl2-612/GXD HT Raw Sample Value Search: return by experiment (not sample)
#       new file:   GXD_HTRawSampleByValue2.py
#       modified:   pwireports.txt

TAG: qcreports_db-6-0-22-63
DATE: 10/25/2023
STAFF: dbm
wts2-1313/fl2-602/add sunday/inferred from linkout errors to GO/QC

TAG: qcreports_db-6-0-22-62
DATE: 10/19/2023
STAFF: dbm
qcr.shtml: remove link to TAL (retired)

TAG: qcreports_db-6-0-22-61
DATE: 10/17/2023
STAFF: sc
Fixed bug in MRK_Withdrawn.sql - never updated when MRK_Status terms
were moved to VOC_Term 

TAG: qcreports_db-6-0-22-60
TAG: qcreports_db-6-0-22-59
DATE: 10/03/2023
STAFF: sc
fl2-568/move reports from targetedalleleload
1. weekly/TAL_check_superscript.py
2. weekly/TAL_dupe_allele.py
3. weekly/TAL_multiple_project_ids.py
4. added to qcr.shtml

TAG: qcreports_db-6-0-22-58