@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-22-75
+DATE: 12/05/2023
+STAFF: sc
+New report: weekly/HOM_MouseNoHuman.py
+
 TAG: qcreports_db-6-0-22-74
 DATE: 11/30/2023
 STAFF: dbm
